--- a/front_end/src/app/login/login.component.html
+++ b/front_end/src/app/login/login.component.html
@@ -1,23 +1,32 @@
 <div class="container mt-5">
-    <div class="card" style="padding: 20px;">
-        <form #loginForm="ngForm" (ngSubmit)="login(loginForm)">
-            <input type="text"
-            ngModel
-            name="userName"
-            id="userName"
-            placeholder="Enter Your User Name"
-            class="form-control mb-3"
-            >
-            <input type="password"
-            ngModel
-            name="userPassword"
-            id="userName"
-            placeholder="Enter Your Password"
-            class="form-control mb-3"
-            >
-            <input type="submit"
-            value="Login"
-            class="btn btn-outline-primary form-control rounded-0">
-        </form>
-    </div>
+  <div class="card" style="padding: 20px">
+    <form #loginForm="ngForm" (ngSubmit)="login(loginForm)">
+      <mat-form-field appearance="outline" class="w-100">
+        <mat-label>User Name</mat-label>
+        <input
+          matInput
+          ngModel
+          name="userName"
+          id="userName"
+          placeholder="User Name"
+        />
+        <mat-hint>user name</mat-hint>
+      </mat-form-field>
+      <mat-form-field appearance="outline" class="w-100">
+        <mat-label>Password</mat-label>
+        <input
+        type="password"
+          ngModel
+          name="userPassword"
+          id="userPassword"
+          matInput
+          placeholder="Password"
+        />
+
+        <mat-hint>password</mat-hint>
+      </mat-form-field>
+
+      <button type="password" mat-raised-button color="primary" class="w-100">Login</button>
+    </form>
+  </div>
 </div>
