--- a/front_end/src/app/header/header.component.html
+++ b/front_end/src/app/header/header.component.html
@@ -1,10 +1,14 @@
-
- <mat-toolbar color="primary">
+<mat-toolbar color="primary">
   <span>
     E-commerce application
   </span>
   <span class="space-button"></span>
 <button  *ngIf="!isLoggedIn()" mat-raised-button color="primary" routerLink="/login">Login</button>
 <button *ngIf="isLoggedIn()" mat-raised-button color="warn" (click)="logout()">Logout</button>
- 
+</mat-toolbar>
+
+
+<mat-toolbar color="primary" *ngIf="isLoggedIn()">
+<button mat-raised-button color="primary" routerLink="/">Home</button>
+<button *ngIf="isAdmin()" mat-raised-button color="primary" routerLink="/addNewProduct">Add New Product</button>
 </mat-toolbar>
