--- a/front_end/src/app/add-new-product/add-new-product.component.html
+++ b/front_end/src/app/add-new-product/add-new-product.component.html
@@ -37,7 +37,11 @@
             </form>
       </div>
 
-      <div class="col-6">Img Area</div>
+      <div class="col-6">
+<!-- <div class="col-6">
+  <input type="file" multiple value="select" #selectFile (change)="onFileSelected($event)" >
+</div> -->
+      </div>
     </div>
   </div>
 </div>
